--- a/points_api/package.json
+++ b/points_api/package.json
@@ -7,13 +7,14 @@
     "dev": "tsx watch src/index.ts",
     "lint": "eslint src --ext .ts --fix",
     "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
-    "migrate:c":"npm run knex -- migrate:make",
-    "migrate:e":"npm run knex -- migrate:latest"
+    "migrate:c": "npm run knex -- migrate:make",
+    "migrate:e": "npm run knex -- migrate:latest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
     "knex": "^3.1.0",
