--- a/points_api/package.json
+++ b/points_api/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint src --ext .ts --fix",
     "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
     "migrate:c": "npm run knex -- migrate:make",
-    "migrate:e": "npm run knex -- migrate:latest"
+    "migrate:e": "npm run knex -- migrate:latest",
+    "build": "tsup src -d build"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "fastify": "^4.27.0",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7",
+    "tsup": "^8.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
